Can output scala traits