@@ -2,8 +2,6 @@ package de.etgramlich.dsl.generator;
 
 import de.etgramlich.dsl.graph.GraphBuilder;
 import de.etgramlich.dsl.graph.type.BnfRuleGraph;
-import de.etgramlich.dsl.graph.type.Node;
-import de.etgramlich.dsl.graph.type.NodeEdge;
 import de.etgramlich.dsl.graph.type.NodeType;
 import de.etgramlich.dsl.graph.type.OptionalEdge;
 import de.etgramlich.dsl.graph.type.Scope;
@@ -16,20 +14,17 @@ import de.etgramlich.dsl.parser.type.repetition.ZeroOrMore;
 import de.etgramlich.dsl.parser.type.text.Keyword;
 import de.etgramlich.dsl.parser.type.text.NonTerminal;
 import de.etgramlich.dsl.parser.type.text.Type;
-import de.etgramlich.dsl.util.StringUtil;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
-class InterfaceBuilderTest {
+class AbstractInterfaceBuilderTest {
     private static final String DUMMY_DIRECTORY = ".";
     private static final String DUMMY_PACKAGE = "com.dummy";
 
@@ -79,159 +74,21 @@ class InterfaceBuilderTest {
     }
 
     @Test
-    void renderInterface_interfaceWithOnlyName() {
-        final Interface anInterface = new Interface("Test", Collections.emptySet(), Collections.emptySet());
-        final String expected = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                        " interface Test { }");
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
-        assertEquals(expected, StringUtil.removeAllWhiteSpaces(builder.renderInterface(anInterface)));
-    }
-
-    @Test
-    void renderInterface_interfaceWithOneParent() {
-        final Set<String> parents = Set.of("SuperInterface");
-        final Interface anInterface = new Interface("Test", parents, Collections.emptySet());
-        final String expected = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                        " interface Test extends " + parents.iterator().next() + "{ }");
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
-        assertEquals(expected, StringUtil.removeAllWhiteSpaces(builder.renderInterface(anInterface)));
-    }
-
-    @Test
-    void renderInterface_interfaceWithMultipleParents() {
-        final Set<String> parents = Set.of("SuperInterface", "OtherParent");
-        final Iterator<String> parentIterator = parents.iterator();
-        final Interface anInterface = new Interface("Test", parents, Collections.emptySet());
-        final String expected = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                "interface Test extends " + parentIterator.next() + ", " + parentIterator.next() + "{ }");
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
-        assertEquals(expected, StringUtil.removeAllWhiteSpaces(builder.renderInterface(anInterface)));
-    }
-
-    @Test
-    void renderInterface_interfaceNoParentsTwoMethodsNoArguments() {
-        final Set<Method> methods = Set.of(
-                new Method("int", "getX"),
-                new Method("int", "getY")
-        );
-
-        final Interface anInterface = new Interface("Test", Collections.emptySet(), methods);
-        final String expectedA = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                " interface Test {" +
-                    "int getX();" +
-                    "int getY();" +
-                " }");
-        final String expectedB = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                " interface Test {" +
-                    "int getY();" +
-                    "int getX();" +
-                " }");
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
-        final String interfaceString = StringUtil.removeAllWhiteSpaces(builder.renderInterface(anInterface));
-        assertTrue(interfaceString.equals(expectedA) || interfaceString.equals(expectedB));
-    }
-
-    @Test
-    void renderInterface_interfaceNoParentsTwoMethodsTwoArgumentsEach() {
-        final Set<Method> methods = Set.of(
-                new Method("int", "getX", List.of(
-                        new Argument("int", "a"),
-                        new Argument("int", "b")
-                )),
-                new Method("int", "getY", List.of(
-                        new Argument("int", "a"),
-                        new Argument("int", "b")
-                ))
-        );
-
-        final Interface anInterface = new Interface("Test", Collections.emptySet(), methods);
-        final String expectedA = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                " interface Test {" +
-                    "int getX(int a, int b);" +
-                    "int getY(int a, int b);" +
-                " }");
-        final String expectedB = StringUtil.removeAllWhiteSpaces(
-                "package " + DUMMY_PACKAGE + ";" + StringUtil.NEWLINE +
-                "interface Test {" +
-                    "int getY(int a, int b);" +
-                    "int getX(int a, int b);" +
-                " }");
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
-        final String interfaceString = StringUtil.removeAllWhiteSpaces(builder.renderInterface(anInterface));
-        assertTrue(interfaceString.equals(expectedA) || interfaceString.equals(expectedB));
-    }
-
-    @Test
-    void renderInterface_joi() {
-        final BnfRuleGraph graph = new GraphBuilder(new BnfRule(new NonTerminal("joi"),
-                        new Alternatives(List.of(
-                                new Sequence(List.of(
-                                        new Precedence(new Alternatives(List.of(
-                                                new Sequence(List.of(new Keyword("'component'"))),
-                                                new Sequence(List.of(new Keyword("'singleton'")))))),
-                                        new Type("String"),
-                                        new Keyword("impl"), new Type("String"),
-                                        new ZeroOrMore(new Alternatives(List.of(new Sequence(List.of(
-                                                new Keyword("impl"), new Type("String")))))),
-                                        new Keyword("method"), new Type("String"),
-                                        new ZeroOrMore(new Alternatives(List.of(new Sequence(List.of(
-                                                new Keyword("method"), new Type("String")))))),
-                                        new ZeroOrMore(new Alternatives(List.of(new Sequence(List.of(
-                                                new Keyword("field"), new Type("String"))))))
-                                )))))).getGraph();
-
-        final InterfaceBuilder ib = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
-        final Set<Interface> interfaces = ib.getInterfaces(graph);
-        assertEquals(10, interfaces.size());
-
-        final Set<String> keywords = graph.edgeSet().stream()
-                .filter(edge -> edge instanceof NodeEdge)
-                .map(edge -> ((NodeEdge) edge).getNode())
-                .filter(node -> node.getType().equals(NodeType.KEYWORD))
-                .map(Node::getName)
-                .collect(Collectors.toUnmodifiableSet());
-        final Set<String> methodNames = interfaces.stream()
-                .flatMap(anInterface -> anInterface.getMethods().stream())
-                .map(Method::getName)
-                .collect(Collectors.toUnmodifiableSet());
-        assertEquals(keywords, methodNames);
-
-        final Set<String> types = graph.edgeSet().stream()
-                .filter(edge -> edge instanceof NodeEdge)
-                .map(edge -> ((NodeEdge) edge).getNode())
-                .filter(node -> node.getType().equals(NodeType.TYPE))
-                .map(Node::getName)
-                .collect(Collectors.toUnmodifiableSet());
-        final Set<String> arguments = interfaces.stream()
-                .flatMap(anInterface -> anInterface.getMethods().stream())
-                .flatMap(method -> method.getArguments().stream())
-                .map(Argument::getType)
-                .collect(Collectors.toUnmodifiableSet());
-        assertEquals(types, arguments);
-    }
-
-    @Test
     void getInterfaces_alternatives() {
         final BnfRuleGraph graph = new GraphBuilder(new BnfRule(new NonTerminal("joi"),
                 new Alternatives(List.of(
                         new Sequence(List.of(new Keyword("component"))),
                         new Sequence(List.of(new Keyword("singleton"))))))).getGraph();
 
-        final Set<Interface> interfaces = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE).getInterfaces(graph);
+        final Set<Interface> interfaces = new JavaInterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE).getInterfaces(graph);
         assertEquals(2, interfaces.size());
 
         final String secondScopeName = "Scope_3";
         final Set<Interface> expected = Set.of(
-            new Interface("Scope_0", Collections.emptySet(), Set.of(
-                new Method(secondScopeName, "component"),
-                new Method(secondScopeName, "singleton"))),
-            new Interface(secondScopeName, Collections.emptySet(), Collections.emptySet()));
+                new Interface("Scope_0", Collections.emptySet(), Set.of(
+                        new Method(secondScopeName, "component"),
+                        new Method(secondScopeName, "singleton"))),
+                new Interface(secondScopeName, Collections.emptySet(), Collections.emptySet()));
         assertEquals(expected, interfaces);
     }
 
@@ -244,7 +101,7 @@ class InterfaceBuilderTest {
                                 new Keyword("singleton"),
                                 new Keyword("iface"))))))).getGraph();
 
-        final Set<Interface> interfaces = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE).getInterfaces(graph);
+        final Set<Interface> interfaces = new JavaInterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE).getInterfaces(graph);
         final Set<Interface> expected = Set.of(
                 new Interface("Scope_0", Collections.emptySet(), Set.of(
                         new Method("Scope_1", "component"))),
@@ -265,7 +122,7 @@ class InterfaceBuilderTest {
                         new Sequence(List.of(new Keyword("iface"))))))).getGraph();
         final Set<String> expected = Set.of("Scope_0", "Scope_4");
 
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
+        final JavaInterfaceBuilder builder = new JavaInterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
         assertEquals(expected, getInterfacesToSave(graph));
 
         final Set<String> interfaces = builder.getInterfaces(graph).stream()
@@ -283,7 +140,7 @@ class InterfaceBuilderTest {
                                 new Sequence(List.of(new Keyword("singleton"))),
                                 new Sequence(List.of(new Keyword("iface")))))))))))).getGraph();
 
-        final Set<Interface> interfaces = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE).getInterfaces(graph);
+        final Set<Interface> interfaces = new JavaInterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE).getInterfaces(graph);
         assertEquals(3, interfaces.size());
 
         final Set<Interface> expected = Set.of(
@@ -304,7 +161,7 @@ class InterfaceBuilderTest {
                 )))).getGraph();
         final Set<String> expected = Set.of("Scope_0", "Scope_1", "Scope_2", "Scope_3");
 
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
+        final JavaInterfaceBuilder builder = new JavaInterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
         assertEquals(expected, getInterfacesToSave(graph));
 
         final Set<String> actual = builder.getInterfaces(graph).stream()
@@ -335,7 +192,7 @@ class InterfaceBuilderTest {
                 Set.of("Scope_0", "Scope_4", "Scope_6", "Scope_9", "Scope_8", "Scope_11", "Scope_14", "Scope_13",
                         "Scope_17", "Scope_16");
 
-        final InterfaceBuilder builder = new InterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
+        final JavaInterfaceBuilder builder = new JavaInterfaceBuilder(DUMMY_DIRECTORY, DUMMY_PACKAGE);
         assertEquals(expectedInterfaces, getInterfacesToSave(graph));
 
         final Set<String> actual = builder.getInterfaces(graph).stream()
